--- a/window/style.css
+++ b/window/style.css
@@ -40,6 +40,18 @@
 	z-index: 100;
 }
 
+.crt-effect::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: radial-gradient(ellipse at center, rgba(0,0,0,0) 75%, rgba(0,0,0,0.3) 100%);
+	pointer-events: none;
+	z-index: 9999;
+}
+
 body {
 	margin: 0;
 	font-family: 'Roboto Mono', monospace;
@@ -430,6 +442,10 @@ body {
 	flex-grow: 1;
 }
 
+#start-menu.hidden {
+	display: none
+}
+
 .start-menu-column {
 	padding: 10px;
 }
@@ -540,8 +556,11 @@ body {
 	z-index: 1100;
 	min-width: 150px;
 	background-color: var(--xp-window-bg);
-	display: none;
 	border-radius: 0;
+}
+
+#context-menu.hidden {
+	display: none;
 }
 
 #context-menu ul {
@@ -567,10 +586,6 @@ body {
 	background-color: var(--xp-border-light);
 	margin: 3px 0;
 	padding: 0;
-}
-
-.hidden {
-	display: none;
 }
 
 .xp-window.opening {
