--- a/window/style.css
+++ b/window/style.css
@@ -557,6 +557,7 @@ body {
 	min-width: 150px;
 	background-color: var(--xp-window-bg);
 	border-radius: 0;
+	position: absolute;
 }
 
 #context-menu.hidden {
@@ -566,6 +567,7 @@ body {
 #context-menu ul {
 	list-style: none;
 	margin: 0;
+	position: relative;
 	padding: 0;
 }
 
@@ -586,6 +588,36 @@ body {
 	background-color: var(--xp-border-light);
 	margin: 3px 0;
 	padding: 0;
+}
+
+#context-menu li.has-submenu {
+	position: relative;
+}
+
+#context-menu li.has-submenu::after {
+	content: '►';
+	position: absolute;
+	right: 5px;
+	color: var(--xp-font-color);
+}
+
+#context-menu li.has-submenu:hover::after {
+	color: var(--xp-selection-text);
+}
+
+#context-menu .submenu {
+	position: absolute;
+	left: 100%;
+	top: -3px;
+	background-color: var(--xp-window-bg);
+	border: 1px solid var(--xp-border-dark);
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+	padding: 2px;
+	min-width: 120px;
+}
+
+#context-menu .submenu li {
+	padding: 4px 10px;
 }
 
 .xp-window.opening {
